# papa-vision

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  autoresearch-dashboard.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  pyproject.toml
.github/workflows/: ci.yml
configs/: custom_cnn.yaml  efficientnet_b0.yaml  mobilenet_v2.yaml  resnet18.yaml
data/: README.md
experiments/: worklog.md
notebooks/: demo.ipynb
paper/: Makefile  main.tex  main_es.tex  references.bib  results_macros.tex  tables.tex  tables_es.tex
results/metrics/: autoresearch.json  summary.json
results/metrics/preds/: custom_cnn_seed0.npz  custom_cnn_seed1.npz  custom_cnn_seed2.npz  efficientnet_b0_seed0.npz  efficientnet_b0_seed1.npz  efficientnet_b0_seed2.npz  mobilenet_v2_seed0.npz  mobilenet_v2_seed1.npz  mobilenet_v2_seed2.npz  resnet18_seed0.npz  resnet18_seed1.npz  resnet18_seed2.npz
results/metrics/runs/: custom_cnn_seed0.json  custom_cnn_seed1.json  custom_cnn_seed2.json  efficientnet_b0_seed0.json  efficientnet_b0_seed1.json  efficientnet_b0_seed2.json  mobilenet_v2_seed0.json  mobilenet_v2_seed1.json  mobilenet_v2_seed2.json  resnet18_seed0.json  resnet18_seed1.json  resnet18_seed2.json
results/metrics/test/: custom_cnn_seed0.json  custom_cnn_seed1.json  custom_cnn_seed2.json  (+9 more)
scripts/: autoresearch_loop.py  download_data.py  make_figures.py  make_paper_tables.py
slides/: presentacion.md  presentation.md
src/papavision/: __init__.py  data.py  evaluate.py  gradcam.py  models.py  stats.py  train.py  utils.py
tests/: test_data.py  test_models.py  test_stats.py  test_train.py
